# nbodyssey

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
benchmarks/: README.md  energy_gpu_bh_thread.csv  energy_gpu_bh_warp.csv  energy_gpu_naive.csv  gpu_results.csv
docs/: FORMATS.md  PERFORMANCE.md  README.md
scripts/: barnes_hut_reference.py  generate_ic.py  gpu_bench.sh  lbvh_check.py  plot_benchmarks.py  plot_energy.py  reference_nbody.py  render.py  requirements.txt  stages_figure.py
src/: cuda_check.cuh  forces.cu  forces.cuh  forces_bh.cu  integrator.cu  integrator.cuh  main.cu  simulation.cu  simulation.hpp
